hermes_fuzz_executed_few_shot/fuzz_61_execution
'use strict';
var bar3 = {x:15, y:2, z:3
,{a:'abc', x:17}
,{a:'abc', x:18}
,{a:'abc', x:19}
,{a:'abc', x:20}
,{a:'abc', x:21}
,{a:'abc', x:22}
,{a:undefined, x:23}};
 
var bar4 = {x:3, y:4, z:5, s: '6'};
;
Object.assign(new Array(10), [[1, 2, 3], [4, 5, 6]]);


Execution Output ------------------:
test.js:3:2: error: invalid property name - must be a string, number or identifier
,{a:'abc', x:17}
 ^
